--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,13 @@
 			<artifactId>joda-time</artifactId>
 			<version>2.10.5</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13-rc-1</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 </project>
